--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.sparkcoders.elearningMobile"
     },
     "web": {
       "favicon": "./assets/favicon.png"
