Implement drm and download management

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -192,6 +192,10 @@ dependencies {
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
     def isWebpAnimatedEnabled = (findProperty('expo.webp.animated') ?: "") == "true";
 
+    compile project(':react-native-video')
+    implementation "androidx.appcompat:appcompat:1.0.0"
+
+    implementation project(':rn-fetch-blob')
     // If your app supports Android versions before Ice Cream Sandwich (API level 14)
     // All fresco packages should use the same version
     if (isGifEnabled || isWebpEnabled) {
