--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-blob-util": "^0.16.0",
     "react-native-circular-progress": "^1.3.7",
     "react-native-elements": "^3.4.2",
     "react-native-linear-gradient": "^2.5.6",
@@ -36,7 +37,8 @@
     "react-native-svg": "^12.3.0",
     "react-native-video": "^5.2.0",
     "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
