--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "reactotron-react-native": "^5.0.1"
   },
   "private": true
 }
