--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
+    "react-native-fs": "^2.20.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.11.2",
