--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.64.3",
     "react-native-blob-util": "^0.16.0",
     "react-native-circular-progress": "^1.3.7",
     "react-native-dotenv": "^3.3.1",
@@ -37,7 +37,7 @@
     "react-native-paper-tabs": "^0.7.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "^13.3.0",
     "react-native-video": "^5.2.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
