List wifi devices and implement content hub

--- a/app.json
+++ b/app.json
@@ -13,9 +13,8 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
+    "plugins": ["react-native-wifi-reborn"],
     "ios": {
       "supportsTablet": true
     },
