--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-video": "^5.2.0",
     "react-native-web": "0.17.1",
+    "react-native-wifi-reborn": "^4.7.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.2",
     "reactotron-redux": "^3.1.3",
