--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,15 @@
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
+  <uses-permission
+              android:required="true"
+              android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+  <uses-permission
+          android:required="true"
+          android:name="android.permission.ACCESS_WIFI_STATE"/>
+  <uses-permission
+          android:required="true"
+          android:name="android.permission.CHANGE_WIFI_STATE"/>     
   <queries>
     <intent>
       <action android:name="android.intent.action.VIEW"/>
