--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "^0.64.3",
+    "react-native": "^0.64.4",
     "react-native-blob-util": "^0.16.0",
     "react-native-circular-progress": "^1.3.7",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.11.2",
@@ -40,6 +41,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-video": "^5.2.0",
     "react-native-web": "0.17.1",
+    "react-native-wifi-p2p": "^3.3.0",
     "react-native-wifi-reborn": "^4.7.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.2",
