--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.11.2",
     "react-native-paper-tabs": "^0.7.0",
+    "react-native-pdf": "^6.6.2",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.3.0",
