--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/netinfo": "^8.3.0",
     "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "accordion-collapse-react-native": "^1.1.1",
     "amazon-cognito-identity-js": "^5.2.8",
     "aws-amplify": "^4.3.21",
     "aws-amplify-react-native": "^6.0.4",
